fix(logs): boot limpo - zera WARN/ERROR em dashboards, provisioner e enroll
Regime permanente sem nenhuma linha de WARN/ERROR/DEPRECATION. Restam ~13
linhas no boot frio do opensearch-node, todas de nivel JVM/imagem ou corridas
de inicializacao que se resolvem sozinhas (detalhadas no README).

Correcoes de causa raiz:
- scripts/opensearch-entrypoint.sh (novo): remove o plugin Performance
  Analyzer (a imagem 3.8.0 nao traz performance-analyzer.properties nem
  plugin-stats-metadata -> 2 ERROR + stacktrace), roda o instalador demo,
  tira node.max_local_storage_nodes/audit.type do opensearch.yml gerado e
  aplica chmod 600/700 nos certos demo (7x WARN "insecure file permissions").
- Dashboards passa a usar a conta de servico kibanaserver: 'pmotiadm'
  (all_access) nao tem permissao em /_plugins/_security/tenantinfo -> 403 no
  boot. Multitenancy desligada (elimina "no permissions for [] ...
  requestedTenant=__user__" a cada navegacao).
- requestHeadersWhitelist -> requestHeadersAllowlist (deprecado).
- setup-ai.sh registra os flow agents os_summary e os_summary_with_log_pattern
  (sem eles o Dashboards loga "Failed to find config with the provided
  config id" ao usar Summarize).
- ListIndexTool fixado em indices ["*","-.*"]: no 3.8 a tool usa
  GET /_list/indices, que responde 403 quando o alvo resolve indices de
  sistema. Com o escopo restrito o agent volta a listar indices.
- setup-ai.sh faz undeploy dos modelos antes de atualizar o connector
  (HTTP 400 "N models are still using this connector").
- setup-features.sh: removido plugins.security_analytics.enable_detectors
  (setting inexistente -> settings_exception) e criado template single-node
  com 0 replicas (cluster estava YELLOW para sempre; agora GREEN).
- healthcheck do opensearch e sonda do provisioner passam a autenticar
  (WARN "No 'Authorization' header" a cada 10s).
- OPENSEARCH_JAVA_OPTS ganha --enable-native-access=ALL-UNNAMED e
  --sun-misc-unsafe-memory-access=allow (silencia 8 WARNING do JDK 25)